# htmx-askama-axum-shuttle

./: .env  Cargo.toml  README.md
migrations/: 20231119220800_init.up.sql
src/: main.rs
templates/: base.html  index.html  stream-subscription.html  stream.html  styles.css  todo.html  todos.html
